Fix header positioning on iPhone.

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -126,10 +126,22 @@ header {
   margin: 0rem 2rem;
 }
 
+@media only screen and (max-width: 768px) {
+  header .container-960px-header img {
+    margin-right: 0rem;
+  }
+}
+
 header .header-items {
   display: flex;
   align-items: center;
   padding: 0.5rem 2rem 0.5rem 0.5rem;
+}
+
+@media only screen and (max-width: 768px) {
+  header .header-items button {
+    margin-left: 0rem;
+  }
 }
 
 header .header-item {
@@ -146,6 +158,12 @@ header .header-item {
   header .header-item {
     flex-direction: column;
     justify-content: space-between;
+  }
+}
+
+@media only screen and (max-width: 768px) {
+  header .header-item {
+    padding-left: 0rem;
   }
 }
 
